<resources>
    <string name="app_name">Operaciones</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="search_hint">Buscar</string>
    <string name="settings_description">Buscar No. Ticket</string>
    <string name="title_section1">Tickets</string>
    <string name="title_section2">Reporte</string>
    <string name="hello_world">Hello world!</string>


    <string name="btnEntrar">Entrar</string>
    <string name="activity_tab">Supervisor</string>
    <string name="activity_ticket">Tickets</string>
    <string name="TicketIncompletoExceptionMessage">Descarga de tickets incomleta. Favor de intentarlo nuevamente</string>
    <string name="title_activity_detail_ticket">DetailTicketActivity</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="mapa_satelital">Mapa Satelital</string>
    <string name="mapa_normal">Mapa Normal</string>
    <string name="title_activity_reporte">ReporteActivity</string>
    <string name="logout_menu_item">Salir</string>
    <string name="title_activity_conclusion_detail_ticket">ConclusionDetailTicketActivity</string>
    <string name="title_activity_conclusion_detail2">ConclusionDetail2Activity</string>
    <string name="title_activity_conclusion_detail3">ConclusionDetail3Activity</string>
    <string name="title_activity_reporte_principal">ReportePrincipalActivity</string>
    <string name="motivo">Motivo</string>
    <string name="dependencia">Dependencia</string>
    <string name="grupo">Grupo</string>
    <string name="delegacion">Delegacion</string>
    <string name="sentido">Sentido</string>
    <string name="lugarFisico">Lugar Físico</string>
    <string name="localizado">Localizado</string>
    <string name="prioridad">Prioridad</string>
    <string name="procede">Procede</string>
    <string name="atendido">Atendido</string>
    <string name="title_activity_reporte_img">ReporteImgActivity</string>
    <string name="title_activity_reporte_direcciones">ReporteDireccionesActivity</string>
    <string name="atrasButton">Atrás</string>
    <string name="siguienteButton">Siguiente</string>
    <string name="debugMenuItemText">Modo Debug</string>
    <string name="nuevoReporte">Crear nuevo reporte</string>
    <string name="tituloMenu1">Supervisor</string>
    <string name="tituloMenu2">Actualizar</string>
    <string name="tituloMenu3">Sincronizar</string>
    <string name="tituloMenu4">Salir</string>
    <string name="action_search">Search</string>
    <string name="action_compose">Componer</string>

    <string name="estado_operacion">Estado Operación</string>
    <string name="materiales">Materiales</string>
    <string name="cantidad">Cantidad</string>
    <string name="unidad_medida">Unidad de Medida</string>

    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="ticketsDialog">No. Tickets</string>


    <string name="title_activity_provisional">ProvisionalActivity</string>
    <string name="title_activity_ticket_list">TicketListActivity</string>
    <string name="title_activity_detalle1_info">Detalle1Info</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_detalle3_reporte">Detalle3Reporte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ticket_busca">TicketBusca</string>
    <string name="title_activity_direcciones">DireccionesActivity</string>
    <string name="title_activity_conclusion_detalle1_info">ConclusionDetalle1Info</string>
    <string name="title_activity_conclusion_detalle2_info">ConclusionDetalle2Info</string>
    <string name="title_activity_conclusion_detalle3_info">ConclusionDetalle3Info</string>
    <string name="title_activity_conclusion_detalle4_reporte">ConclusionDetalle4Reporte</string>
    <string name="title_activity_ingreso_reporte_evidencia">Captura de evidencia</string>
    <string name="title_activity_ingreso_reporte_datos">Captura de datos</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detalle2_info">Detalle2Info</string>



</resources>
